--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,7 @@
         <title>{% block title %}{% endblock %} - Pilgrims</title>
 
         {% block stylesheets %}
-            <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,700,300,600,800,400" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700,800" rel="stylesheet">
             {% stylesheets
                 "css/bootstrap.min.css"
                 "css/magnific-popup.css"
