--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,94 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>{% block title %}{% endblock %} - Pilgrims</title>
+    <title>{% block title %}{% endblock %} - Pilgrims</title>
 
-        {% block stylesheets %}
-            <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700,800" rel="stylesheet">
-            {% stylesheets
-                "css/bootstrap.min.css"
-                "css/magnific-popup.css"
-                "css/main.css"
-                filter="cssrewrite" output="css/compiled/app.css" %}
-                <link rel="stylesheet" href="{{ asset_url }}" />
-            {% endstylesheets %}
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        {% endblock %}
+    {% block stylesheets %}
+      {% if app.environment == 'prod' %}
+        <link rel="stylesheet" href="{{ asset('built/app.css') }}">
+      {% else %}
+        <link rel="stylesheet" href="{{ asset('build/app.css') }}">
+      {% endif %}
+    {% endblock %}
 
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+  </head>
+  <body class="d-flex flex-column">
 
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                    <a href="//www.unifr.ch"><img src="{{ asset('images/unifr_universite_cut.png') }}" alt="Unifr"></a>
-                </div>
-                <div class="col-xs-12 col-sm-6">
-                    <div class="application-title">
-                        <a href="//lettres.unifr.ch/fr/hist.html">Sciences historiques | Historische Wissenschaften</a><br>
-                        <a href="//www3.unifr.ch/lettres">Faculté des Lettres | Philosophische Fakultät</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <nav class="navbar navbar-default">
-                        <div class="container-fluid">
-                            <!-- Brand and toggle get grouped for better mobile display -->
-                            <div class="navbar-header">
-                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar-collapse">
-                                    <span class="sr-only">Toggle navigation</span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                </button>
-                                <span class="navbar-brand">Pilgrims</span>
-                            </div>
+    {% include '_navbar.html.twig' with { sites_active: block('sites_active') } %}
 
-                            <!-- Collect the nav links, forms, and other content for toggling -->
-                            <div class="collapse navbar-collapse" id="main-navbar-collapse">
-                                <ul class="nav navbar-nav">
-                                    <li class="active"><a href="{{ path('sites_index') }}">Sites</a></li>
-                                </ul>
-                                <ul class="nav navbar-nav navbar-right">
-                                    <li><a href="#">Contact</a></li>
-                                </ul>
-                            </div><!-- /.navbar-collapse -->
-                        </div><!-- /.container-fluid -->
-                    </nav>
-                </div>
-            </div>
+    <div id="container-nte" class="container-fluid flex-grow px-md-5">
+      {% block body %}{% endblock %}
+    </div>
 
-            {% block body %}{% endblock %}
+    {% include '_footer.html.twig' %}
 
-            <div class="application-footer">
-                &copy; Pilgrims - <a href="http://nte.unifr.ch">Centre NTE</a> - University of Fribourg
-            </div>
-        </div>
-
-        {% block javascripts %}
-            <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-            {% javascripts
-                "js/bootstrap.min.js"
-                "js/jquery.magnific-popup.min.js"
-                "js/magnificPopup.js"
-                "js/sites_index.js"
-                "js/sites_show.js"
-                output="js/compiled/app.js" %}
-                <script src="{{ asset_url }}"></script>
-            {% endjavascripts %}
-        {% endblock %}
-    </body>
+    {% block javascripts %}
+      {% if app.environment == 'prod' %}
+        <script src="{{ asset('built/app.js') }}"></script>
+      {% else %}
+        <script src="{{ asset('build/app.js') }}"></script>
+      {% endif %}
+    {% endblock %}
+  </body>
 </html>
