--- a/app/Resources/views/sites/_site.html.twig
+++ b/app/Resources/views/sites/_site.html.twig
@@ -15,6 +15,8 @@
     {% if site.location is not null %}
       <i class="fas fa-map-marker-alt"></i> {{ site.location.region.country.title }} <i class="fas fa-angle-right"></i> {{ site.location.region.title }} <i class="fas fa-angle-right"></i> {{ site.location.title }}<br>
     {% endif %}
-    <i class="fas fa-location-circle"></i> {{ site.latitude}}, {{ site.longitude }}
+    {% if site.latitude is not empty and site.longitude is not empty %}
+      <i class="fas fa-location-circle"></i> {{ site.latitude}}, {{ site.longitude }}
+    {% endif %}
   </div>
 </a>
