add map to site page

--- a/app/Resources/views/sites/show.html.twig
+++ b/app/Resources/views/sites/show.html.twig
@@ -7,8 +7,7 @@
   <div id="site">
     <div class="row">
       <div class="col-4">
-        {% include 'sites/_media.html.twig' %}
-        {% include 'sites/_location.html.twig' %}
+        {% include 'sites/_side.html.twig' %}
       </div>
       <div class="col-8">
         <h1 class="h2 mb-4">
