rework frontend with BS4 and webpack encore

--- a/app/Resources/views/_footer.html.twig
+++ b/app/Resources/views/_footer.html.twig
@@ -10,7 +10,7 @@
       </div>
       <div class="col-12 col-md-6 dev">
         Developed by the Centre NTE.<br>
-        <a href="//www.unifr.ch/nte"><i class="fas fa-home"></i></a>
+        <a href="//www.unifr.ch/nte"><i class="fas fa-igloo"></i></a>
         <a href="//github.com/nte-unifr/pilgrims"><i class="fab fa-github"></i></a>
       </div>
     </div>
