--- a/app/Resources/views/sites/index.html.twig
+++ b/app/Resources/views/sites/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Sites{% endblock %}
-{% block sites_active %}active{% endblock %}
+{% block navbar_sub %}{% endblock %}
 
 {% block body %}
   {% include 'sites/_filters.html.twig' %}
