--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,10 +2,6 @@
 @import "bs_override";
 @import "bs_responsive-card-deck";
 
-.site.card h5 {
-  font-weight: bold;
-}
-
 #site {
   .blockquote {
     font-size: 0.9rem;
@@ -13,14 +9,15 @@
   small {
     font-size: 60%;
   }
-  .tab-content {
-    border-top: 0;
-    border-radius: 0;
-  }
-  #sources .quotes blockquote {
+  .enable-blockquote blockquote {
     border-left: solid 3px #6c757d;
     padding-left: 5px;
     font-size: 0.9rem;
+    margin-bottom: 3rem;
+  }
+  .site-side .card-footer {
+    font-size: 85%;
+    font-weight: 700;
   }
 }
 
@@ -30,4 +27,8 @@
   &:hover {
     color: #fff;
   }
+}
+
+.fa-ul {
+  margin-left: 1.2em;
 }
