--- a/app/Resources/views/_shared/list-group.html.twig
+++ b/app/Resources/views/_shared/list-group.html.twig
@@ -3,8 +3,7 @@
     {% for element in elements %}
       <li class="list-group-item d-flex justify-content-between align-items-center">
         <blockquote class="blockquote mb-0">
-          <p class="mb-0">{{ element.content }}</p>
-          <footer class="blockquote-footer">{{ element.title }}</footer>
+          <div class="mb-0">{{ element.content | markdown }}</div>
         </blockquote>
       </li>
     {% endfor %}
