add pages entity with about page

--- a/app/Resources/views/_navbar.html.twig
+++ b/app/Resources/views/_navbar.html.twig
@@ -9,6 +9,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     {{ navbar_sub | raw }}
     <div class="navbar-nav ml-auto">
+      <a class="nav-item nav-link" href="{{ path('pages_show', {'handle': 'about'}) }}">About</a>
       <a class="nav-item nav-link" href="//lettres.unifr.ch/fr/hist/histoire-de-lart-et-musicologie.html">Contact <i class="fal fa-external-link-square-alt"></i></a>
     </div>
   </div>
