--- a/app/Resources/views/sites/index.html.twig
+++ b/app/Resources/views/sites/index.html.twig
@@ -1,7 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Sites{% endblock %}
-{% block navbar_sub %}{% endblock %}
+
+{% block navbar_sub %}
+  <div class="navbar-nav d-none d-md-flex">
+    <li class="nav-item">
+      <a class="nav-link" href="{{ path('sites_index') }}">Sites</a>
+    </li>
+  </div>
+{% endblock %}
 
 {% block body %}
   {% include 'sites/_filters.html.twig' %}
